--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "client": "npm start --prefix client"
+    "start": "node index",
+    "server": "nodemon index",
+    "client": "npm start --prefix client",
+    "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "author": "",
   "license": "ISC",
@@ -13,6 +15,10 @@
     "nodemon": "^2.0.12"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.6.2",
+    "concurrently": "^6.2.1",
+    "express": "^4.17.1",
+    "react-redux": "^7.2.5",
     "react-router-dom": "^5.3.0"
   }
 }
