--- a/package.json
+++ b/package.json
@@ -15,10 +15,7 @@
     "nodemon": "^2.0.12"
   },
   "dependencies": {
-    "@reduxjs/toolkit": "^1.6.2",
     "concurrently": "^6.2.1",
-    "express": "^4.17.1",
-    "react-redux": "^7.2.5",
-    "react-router-dom": "^5.3.0"
+    "express": "^4.17.1"
   }
 }
