--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "react-router-dom": "^5.3.0",
     "react-scripts": "^3.4.4",
     "redux-thunk": "^2.3.0",
+    "socket.io-client": "^4.3.2",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
