--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "react-scripts": "^3.4.4",
     "redux-thunk": "^2.3.0",
     "socket.io-client": "^4.3.2",
+    "uuid": "^8.3.2",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
