--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "nodemon": "^2.0.12"
   },
   "dependencies": {
+    "axios": "^0.24.0",
     "concurrently": "^6.2.1",
-    "express": "^4.17.1"
+    "dotenv": "^10.0.0",
+    "express": "^4.17.1",
+    "mongoose": "^6.0.12"
   }
 }
