--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "apexcharts": "^3.29.0",
+    "framer-motion": "^5.0.0",
     "immer": "^9.0.6",
     "react": "^17.0.2",
     "react-apexcharts": "^1.3.9",
