--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "apexcharts": "^3.29.0",
     "framer-motion": "^5.0.0",
     "immer": "^9.0.6",
+    "jsencrypt": "^3.2.1",
     "react": "^17.0.2",
     "react-apexcharts": "^1.3.9",
     "react-dom": "^17.0.2",
