--- a/package.json
+++ b/package.json
@@ -13,14 +13,15 @@
   "license": "ISC",
   "devDependencies": {
     "concurrently": "^6.5.1",
-    "crypto": "^1.0.1",
     "crypto-js": "^4.1.1",
     "nodemon": "^2.0.12"
   },
   "dependencies": {
     "axios": "^0.24.0",
+    "bcryptjs": "^2.4.3",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.12"
   }
 }
