--- a/client/package.json
+++ b/client/package.json
@@ -11,8 +11,10 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "apexcharts": "^3.29.0",
+    "crypto-js": "^4.1.1",
     "framer-motion": "^5.0.0",
     "immer": "^9.0.6",
+    "jsencrypt": "^3.2.1",
     "react": "^17.0.2",
     "react-apexcharts": "^1.3.9",
     "react-dom": "^17.0.2",
