--- a/package.json
+++ b/package.json
@@ -7,18 +7,25 @@
     "start": "node index",
     "server": "nodemon index",
     "client": "npm start --prefix client",
+    "format": "prettier --write \"./**/*.{js,jsx}\"",
     "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "nodemon": "^2.0.12"
+    "nodemon": "^2.0.12",
+    "prettier": "^2.5.1"
   },
   "dependencies": {
     "axios": "^0.24.0",
+    "bcrypt": "^5.0.1",
     "concurrently": "^6.2.1",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
+    "crypto-js": "^4.1.1",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "express-session": "^1.17.2",
     "mongoose": "^6.0.12"
   }
 }
